scss fix attempt for scrollable with menu open on iphone

--- a/webroot/scss/inc/basic_elements.scss
+++ b/webroot/scss/inc/basic_elements.scss
@@ -43,6 +43,10 @@
 
 .no-scroll {
 	overflow: hidden;
+	// this is necessary for it to work on iOS(6)
+	width: 100%;
+	height: 100%;
+	position: fixed;
 }
 
 a {
